Поменял имя класса для пагинации в каталоге и удалил лишнюю обертку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -589,7 +589,6 @@
         </li>
       </ul>
       <a class="filtered__show-more-button link-reset" href="catalog.html"><span>&#x2b;</span> Показать еще</a>
-      <div class="filtered__pagination">
         <ul class="filtered__button-list list-reset">
           <li class="filtered__button filtered__button--previous">
             <a class="link-reset" href="#" title="Предыдущий">
@@ -602,14 +601,13 @@
             </a>
           </li>
         </ul>
-        <ul class="filtered__breadcrumbs filtered__breadcrumbs--hide list-reset">
-          <li class="filtered__breadcrumb filtered__breadcrumb"><a class="filtered__link filtered__link--active link-reset" href="#">1</a>
+        <ul class="filtered__pagination filtered__pagination--hide list-reset">
+          <li class="filtered__pagination-item"><a class="filtered__link filtered__link--active link-reset" href="#">1</a>
           </li>
-          <li class="filtered__breadcrumb"><a class="filtered__link link-reset" href="#">2</a></li>
-          <li class="filtered__breadcrumb"><a class="filtered__link link-reset" href="#">3</a></li>
-          <li class="filtered__breadcrumb"><a class="filtered__link link-reset" href="#">4</a></li>
+          <li class="filtered__pagination-item"><a class="filtered__link link-reset" href="#">2</a></li>
+          <li class="filtered__pagination-item"><a class="filtered__link link-reset" href="#">3</a></li>
+          <li class="filtered__pagination-item"><a class="filtered__link link-reset" href="#">4</a></li>
         </ul>
-      </div>
     </section>
   </main>
   <footer class="page-footer">
