Изменил имя модификатора

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
               <a class="link-reset" href="catalog.html">Попутчики</a>
             </li>
           </ul>
-          <div class="authorization authorization--hidden">
+          <div class="authorization authorization--desctop-hidden">
             <a class="button button--authorization link-reset">Авторизация</a>
           </div>
         </nav>
