Исправил ошибки валидации

--- a/source/form.html
+++ b/source/form.html
@@ -84,8 +84,8 @@
         <div class="user-score user-score--profile">
           <span class="user-score__score user-score__score--profile">80</span>level
         </div>
-        <!-- <img class="profile__image" src="img/profile-photo-petya.png" alt="Ваша фотография" width="100" height="100"> -->
-        <img class="profile__image" src="img/user-photo-petya-desktop.png" alt="">
+        <img class="profile__image" src="img/profile-photo-petya.png" alt="Ваша фотография" width="100" height="100">
+        <!-- <img class="profile__image" src="img/user-photo-petya-desktop.png" alt=""> -->
         <button class="button button--change-photo" type="button">
           <span class="button__text">Сменить фото</span>
           <span class="button__text-desctop">Фото</span>
@@ -398,47 +398,6 @@
           <p class="planner__info">
             Укажите страны, которые вы хотели посетить. Это может быть одна или сразу несколько.
           </p>
-          <!-- ################################################## -->
-          <!-- <div class="planner__countries">
-            <div class="planner__country">
-              <select class="planner__destination-name" name="country">
-                <option value="Босния и герцеговина">Босния и герцеговина</option>
-              </select>
-            </div>
-            <div class="planner__country">
-              <select class="planner__destination-name" name="country">
-                <option value="Чехия">Чехия</option>
-              </select>
-            </div>
-            <div class="planner__country">
-              <button class="planner__destination-name" type="button">Выберите страну
-                <img src="img/arrow-down.svg" alt="Дропдаун" width="12" height="16"></button>
-              <button class="button button--close button--close-flag" type="button">
-                <img src="img/icon-close-flag.svg" alt="Dismiss flag button" width="21" height="21">
-              </button>
-            </div>
-            <div class="planner__country">
-              <button class="planner__destination-name" type="button">Добавить страну
-                <img src="img/icon_plus.svg" alt="Добавить страну" width="14" height="14">
-              </button>
-            </div>
-          </div> -->
-          <!-- #########################################################3 -->
-          <!-- <div class="planner__country-icons">
-            <div class="planner__icon">
-              <img src="img/bosnia-and-herzegovina.png" alt="Босния и герцеговина" width="35" height="24">
-              <button class="button button--close button--close-flag" type="button" aria-label="Закрыть">
-                <img src="img/icon-close-flag.svg" alt="Dismiss flag button" width="21" height="21">
-              </button>
-            </div>
-            <div class="planner__icon">
-              <img src="img/flag-czech.png" alt="Чехия" width="35" height="24">
-              <button class="button button--close button--close-flag" type="button">
-                <img src="img/icon-close-flag.svg" alt="Dismiss flag button" width="21" height="21">
-              </button>
-            </div>
-          </div> -->
-          <!-- ################################33 -->
           <div class="planner__countries">
             <div class="planner__country">
               <select class="planner__destination-name" name="country">
@@ -486,7 +445,6 @@
             <a class="button button--next-step button--step-backwards link-reset" href="#step-1">На шаг назад</a>
           </div>
           <div class="alphabet">
-            <!-- <button class="button button--close" type="button" aria-label="Закрыть">&#10005;</button> -->
             <h2 class="alphabet__title">Выбирите страну
               <button class="button button--close" type="button" aria-label="Закрыть">&#10005;</button>
             </h2>
